--- a/Dynamic-Community-Portal/pages/thankyou.html
+++ b/Dynamic-Community-Portal/pages/thankyou.html
@@ -1,1 +1,5 @@
+<%- include('partials/header') %>
+<h2>Thank You!</h2>
+<p>Your message has been received. We'll get back to you soon.</p>
+<%- include('partials/footer') %>
 
